--- a/manifest.json
+++ b/manifest.json
@@ -2,10 +2,11 @@
   "name": "Stack Pick",
   "short_name": "StackPick",
   "description": "Gaming loadouts built like streetwear drops. Curated hardware kits for UK gamers.",
+  "id": "/",
   "start_url": "/",
   "scope": "/",
   "display": "standalone",
-  "orientation": "portrait-primary",
+  "orientation": "any",
   "background_color": "#0A0A0F",
   "theme_color": "#0A0A0F",
   "lang": "en-GB",
